--- a/server/client/style.css
+++ b/server/client/style.css
@@ -1,3 +1,6 @@
+p{
+	padding: 10px;
+}
 .herolist {
 	list-style: none;
 	margin-left: -34px;
@@ -38,6 +41,7 @@
 }
 .skill_icon {
 	width: 30px;
+	height: 33px;
 }
 .skill_key {
 	width: 30px;
